<resources>
    <string name="app_name">parcial-1-am-acn4a-dotsenko</string>
    <string name="title_home">Hola, Ana</string>
    <string name="today_format">Hoy, %1$s</string>
    <string name="avatar_ana">Avatar de Ana</string>
    <string name="btn_new_racha">Nueva racha</string>
    <string name="your_rachas">Tus Rachas</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_amigos">Amigos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="racha_days_format">%1$d días</string>
    <string name="fire_icon">Estado de racha completada</string>
    <string name="friend_rachas">Rachas con amigos</string>
    <string name="completed_today_format">%1$d rachas completadas hoy</string>
    <string name="completed_today_preview">0 rachas completadas hoy</string>
    <string name="home_subtitle">¡Sigue construyendo tu mejor versión!</string>
    <string name="today_motivation">¡Increíble! Sigue así</string>

</resources>